# Interpretable-jimams

./: README.md  emissions.csv  pyproject.toml
model/: model.pkl
notebooks/: FPDP.ipynb  fairness_tests.ipynb  first_model.ipynb  global_interpretability.ipynb  mitigation.ipynb  step_1.ipynb  step_2.ipynb  step_3.ipynb  step_4.ipynb  step_5.ipynb  step_6.ipynb  step_7.ipynb  step_8.ipynb  step_8_mitigation.ipynb  step_9.ipynb  surrogate_model.ipynb  white_box_models.ipynb  xgboost.ipynb
src/: data_utils.py  model_utils.py
