[tool.poetry]
name = "interpretable-jimams"
version = "0.1.0"
description = ""
authors = ["JIMAMS"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.3.2"
lazypredict = "^0.2.12"
pygam = "^0.9.0"
xgboost = "^2.0.1"
pandas = "^2.1.2"
numpy = "^1.26.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
